assets/CSS/style.css
/* Font imports */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Inter, sans-serif";
    --secondary-font: "Macondo", cursive;
    --primary-color: #3a2620;
    /* dark brown */
    --secondary-color: #aa9581;
    /* light brown */
    --highlight-color: #416a8e;
    /* blue */
    --light-highlight-color: #7a9fc2;
    /* light blue */

}

/* Global styles */
body {
    font-family: var(--primary-font);

    /* To push content down below header, stops it covering content */
    padding-top: 57.15px;
}

h1,
h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
}

h1,
h2 {
    text-transform: uppercase;
}

h2 {
    margin-bottom: 2rem;
}

.sub-heading-color {
    color: var(--highlight-color)
}

.section {
    /* Prevent navbar overlap */
    padding-top: 4.3rem; 
}

/* Buttons */

.custom-button-filled {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
}

.custom-button-filled:hover {
    border: 2px solid var(--secondary-color);
    background-color: var(--secondary-color);
    color: white;
}

.custom-button-outline {
    color: var(--highlight-color);
    padding: 7px 25px;
    border: 2px solid var(--highlight-color);
}

.custom-button-outline:hover {
    color: white;
    background-color: var(--highlight-color);
}
/* Navbar  */

#navbar {
    background-color: var(--primary-color);
}

#navbar .logo {
    width: 30px;
}

/* Header */

#header .lead {
    font-family: var(--secondary-font);
}

/* Services */

#services .card-footer {
    font-weight: bold;
    color: var(--highlight-color);
    background-color: transparent;

}

#services .card {
    margin-bottom: 1.5rem;
}

#new-games div,
#fav-games div {
    border: none;
}

/* Events */

.discount-button {
    background-color: var(--highlight-color);
    color: white;
    border-radius: 0;
    padding: 2px 10px;
    font-weight: bold;
}

.table-hover-change:hover {
    background-color: darkgray;
    transition: 0.3s ease-in-out;
}

#events p,
#events table {
    font-family: var(--primary-font);
}

/* Game reservation form */

#booking-form #booking-form-submit {
    float:right;
}

/* Footer / Contact */

#contact {
    background-color: var(--primary-color);
    color: white;
    padding-bottom: 3rem;
}

#contact h2 {
    color: white;
}

#contact .sub-heading {
    color: var(--light-highlight-color)
}

#contact i {
    color: var(--secondary-color);
    font-size: 1.2rem;
    margin-right: 15px;
}

#contact .social-links i {
    color: var(--light-highlight-color);
    font-size: 1.9rem;
    transition: color .3s ease-in-out;
}

#contact .social-links i:hover {
    color: var(--secondary-color)
}

#contact .table-dark *{
    background-color: transparent;
}

/* Media queries */

/* Media devices (tablets, 768px and up */
@media screen and  (min-width:768px){
    /* Make all serice cards the same height for consistency */
#services .card-body {
    min-height: 191px;
} 
}
/* Media devices (tablets, 992px and up */
@media screen and (min-width:992px){
    /* Make all serice cards the same height for consistency */
    #services .card-body {
        min-height: auto;
    } 
}

/* Media devices (laptops, 1200px and up */
@media screen and (min-width:1200px){
    /* Make all serice cards the same height for consistency */
    #services .card-body {
        min-height: 220px;
    } 
}
/* Media devices (large laptops, 1400px and up */
@media screen and (min-width:1400px){
    /* Make all serice cards the same height for consistency */
     #services .card-body {
        min-height: 195px;
    } 
}

